.happypack/s--134110882
SyntaxError: Unexpected token, expected ... (54:48)

[0m [90m 52 | [39m                  [33m<[39m[33m/[39m[33mCol[39m[33m>[39m
 [90m 53 | [39m                  [33m<[39m[33mCol[39m lg[33m=[39m{[35m6[39m}[33m>[39m
[31m[1m>[22m[39m[90m 54 | [39m                    [33m<[39m[33mTextField[39m name[33m=[39m[32m'lastname'[39m {[36mthis[39m[33m.[39mprops[33m.[39mdata[33m.[39mlastname} value[33m=[39m[32m'r'[39m onChange[33m=[39m{[36mthis[39m[33m.[39mprops[33m.[39mupdate} hintText[33m=[39m[32m"Escriba aquí su nombre"[39m floatingLabelText[33m=[39m[32m"Apellidos"[39m fullWidth[33m=[39m{[36mtrue[39m}[33m/[39m[33m>[39m
 [90m    | [39m                                                [31m[1m^[22m[39m
 [90m 55 | [39m                    [33m<[39m[33mTextField[39m name[33m=[39m[32m'email'[39m value[33m=[39m{[36mthis[39m[33m.[39mprops[33m.[39mdata[33m.[39memail} onChange[33m=[39m{[36mthis[39m[33m.[39mprops[33m.[39mupdate} hintText[33m=[39m[32m"Escriba aquí su nombre"[39m floatingLabelText[33m=[39m[32m"Correo electrónico"[39m fullWidth[33m=[39m{[36mtrue[39m}[33m/[39m[33m>[39m
 [90m 56 | [39m                    [33m<[39m[33mSelectField[39m floatingLabelText[33m=[39m[32m"Género"[39m value[33m=[39m[32m'1'[39m [33m>[39m
 [90m 57 | [39m                      [33m<[39m[33mMenuItem[39m value[33m=[39m{[35m1[39m} primaryText[33m=[39m[32m"Hombre"[39m[33m/[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected ... (54:48)

[0m [90m 52 | [39m                  [33m<[39m[33m/[39m[33mCol[39m[33m>[39m
 [90m 53 | [39m                  [33m<[39m[33mCol[39m lg[33m=[39m{[35m6[39m}[33m>[39m
[31m[1m>[22m[39m[90m 54 | [39m                    [33m<[39m[33mTextField[39m name[33m=[39m[32m'lastname'[39m {[36mthis[39m[33m.[39mprops[33m.[39mdata[33m.[39mlastname} value[33m=[39m[32m'r'[39m onChange[33m=[39m{[36mthis[39m[33m.[39mprops[33m.[39mupdate} hintText[33m=[39m[32m"Escriba aquí su nombre"[39m floatingLabelText[33m=[39m[32m"Apellidos"[39m fullWidth[33m=[39m{[36mtrue[39m}[33m/[39m[33m>[39m
 [90m    | [39m                                                [31m[1m^[22m[39m
 [90m 55 | [39m                    [33m<[39m[33mTextField[39m name[33m=[39m[32m'email'[39m value[33m=[39m{[36mthis[39m[33m.[39mprops[33m.[39mdata[33m.[39memail} onChange[33m=[39m{[36mthis[39m[33m.[39mprops[33m.[39mupdate} hintText[33m=[39m[32m"Escriba aquí su nombre"[39m floatingLabelText[33m=[39m[32m"Correo electrónico"[39m fullWidth[33m=[39m{[36mtrue[39m}[33m/[39m[33m>[39m
 [90m 56 | [39m                    [33m<[39m[33mSelectField[39m floatingLabelText[33m=[39m[32m"Género"[39m value[33m=[39m[32m'1'[39m [33m>[39m
 [90m 57 | [39m                      [33m<[39m[33mMenuItem[39m value[33m=[39m{[35m1[39m} primaryText[33m=[39m[32m"Hombre"[39m[33m/[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)